kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Rook Ceph Dashboard
    gethomepage.dev/group: Storage
    gethomepage.dev/description: "Rook Ceph Storage Dashboard"
    gethomepage.dev/icon: rook.png
spec:
  hostnames:
    - "rook.idahobealefamily.com"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: rook-ceph-dashboard
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
